mserver/primitive/eds/envoyConfig.yaml
node:
  id: node0
  cluster: cluster.local

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                route_config:
                  name: route
                  virtual_hosts:
                    - name: random_payload_svc
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: random_payload }
                http_filters:
                  - name: envoy.router
  clusters:
    - name: random_payload
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: EDS
      eds_cluster_config:
        eds_config:
          api_config_source:
            api_type: GRPC
            grpc_services:
              envoy_grpc:
                cluster_name: xds_cluster
    - name: xds_cluster
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: 127.0.0.1, port_value: 20000 }
